--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -734,6 +734,38 @@ b{
 			}
 		}
 	}
+
+	#SessionController{
+		.social-icons{
+			
+			.span3{
+				display: inline-block;
+				width:20%;
+				margin-left: 2%;
+				margin-right: 2%;
+				
+				
+				
+			}
+
+			.view {
+			
+					margin-top: 3px;
+					vertical-align: top;
+					.view-count{
+						padding-top: 25px;
+						width: 65px;
+						margin-top: 0px;
+	
+						p{
+							margin-top: -10px;
+						}
+
+					}
+				}
+		}
+		
+	}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
@@ -787,10 +819,29 @@ b{
 					}
 				}
 			}
-			#CustomSearchForm_CustomSearchForm_action_customResults{
-				
-			}
+		
 
+		}
+	}
+
+	#SessionController{
+		.social-icons{
+			.span3{
+				width:45%;
+				margin-left: 2.5%;
+				margin-right: 2.5%;
+				padding-bottom: 10px;
+				.view-count{
+					width: 65px;
+				}
+			}
+		}
+		
+	}
+
+	#meetings-wrap{
+		.span3{
+			height:275px;
 		}
 	}
 }
