More responsive fixes

--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -708,6 +708,14 @@ b{
 		}
 	}
 
+	#HomePage{
+		.content{
+			.span1{
+				padding-bottom: 10px;			
+			}
+		}
+	}
+
 	#searchbar{
 		/*width: 100%;*/
 		margin-left: -20px;
