--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -165,6 +165,7 @@ b { font-weight: 500; }
   #navigation .navbar-inner .container .btn-navbar { margin-top: 10px; }
   #navigation .navbar-inner .container .social-icons { display: none !important; }
   #SessionsHolder #searchbar .search .mglass { margin-left: 15px; }
+  #HomePage .content .span1 { padding-bottom: 10px; }
   #searchbar { /*width: 100%;*/ margin-left: -20px; margin-right: -20px; }
   #searchbar .logo { width: 10%; display: none; }
   #searchbar .search fieldset { width: 100%; }
