--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -703,6 +703,17 @@ b{
 				.mglass{
 					margin-left: 15px;
 				}
+			fieldset{
+				width:100%;
+			}
+			#Search{
+				padding-left: 20px;
+				width: 60%;
+				
+				input{
+					width:60%;
+				}
+			}
 			}
 
 		}
@@ -716,13 +727,33 @@ b{
 		}
 	}
 
+	/* Mozilla specific */
+	@-moz-document url-prefix() {
+			    #searchbar{
+			    	.search{
+			    		.mglass{
+			    			  margin-left: -140px !important;
+			    		}
+			    	}
+			    }
+			    #SessionsHolder{
+				    	#searchbar{
+				    	.search{
+				    		.mglass{
+				    			  margin-left: -150px !important;
+				    		}
+				    	}
+				    }
+			    }
+			}
+
+
 	#searchbar{
 		/*width: 100%;*/
 		margin-left: -20px;
 		margin-right: -20px;
 
 		.logo{
-			width: 10%;
 			display: none;
 		}
 		.search{
@@ -732,16 +763,19 @@ b{
 			.mglass{
 				margin-left: 25px;
 			}
+			
 			#Search{
 				padding-left: 20px;
-				width: 70%;
+				width: 60%;
 				
 				input{
-					width:70%;
+					width:60%;
 				}
 			}
 		}
 	}
+
+
 
 	#SessionController{
 		.social-icons{
@@ -751,8 +785,6 @@ b{
 				width:20%;
 				margin-left: 2%;
 				margin-right: 2%;
-				
-				
 				
 			}
 
@@ -773,6 +805,28 @@ b{
 				}
 		}
 		
+	}
+
+	#MeetingController{
+		.section{
+
+			padding: 0px !important;
+			margin-left: 0px !important;
+			
+		}
+
+		.right-divide{
+			padding-left: 10px !important;
+			border-right: 1px $grayMedium solid;
+		
+		}
+		.social{
+			text-align: center;
+			.span4{
+				display: inline-block;
+				width: 30%;
+			}
+		}
 	}
 }
 
@@ -831,6 +885,7 @@ b{
 
 		}
 	}
+		
 
 	#SessionController{
 		.social-icons{
@@ -850,6 +905,33 @@ b{
 	#meetings-wrap{
 		.span3{
 			height:275px;
+		}
+	}
+
+	#MeetingController{
+		.section{
+
+			padding: 0px !important;
+			height: 95px;
+			margin-left: 0px !important;
+			
+		}
+
+		.right-divide{
+			padding-left: 10px !important;
+			border-right: 1px $grayMedium solid;
+		}
+
+		.social{
+			width: 200px;
+			text-align: center;
+			padding-top: 8px;
+			padding-left: 6px;
+			.span4{
+				margin-right: 18px;
+				display: inline-block;
+				width: 20%;
+			}
 		}
 	}
 }
