--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -46,7 +46,7 @@ b { font-weight: 500; }
 #searchbar .search #Search :-moz-placeholder { color: #535353; }
 #searchbar .search #Search ::-moz-placeholder { color: #535353; }
 #searchbar .search #Search :-ms-input-placeholder { color: #535353; }
-#searchbar .search #CustomSearchForm_CustomSearchForm_action_customResults { display: inline-block; width: 77px; padding: 5px 10px; height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
+#searchbar .search #CustomSearchForm_CustomSearchForm_action_customResults { display: inline-block; width: 77px; height: 43px; padding: 5px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
 #searchbar .logo { text-align: right; padding-top: 15px; }
 
 /*Footer -------------------------------------------------- */
@@ -180,7 +180,7 @@ b { font-weight: 500; }
   /* Mozilla specific */
   @-moz-document url-prefix() { #searchbar .search .mglass { margin-left: -140px !important; }
     #SessionsHolder #searchbar .search .mglass { margin-left: -150px !important; } }
-  #searchbar { /*width: 100%;*/ margin-left: -20px; margin-right: -20px; }
+  #searchbar { margin-left: -20px; margin-right: -20px; }
   #searchbar .logo { display: none; }
   #searchbar .search fieldset { width: 100%; }
   #searchbar .search .mglass { margin-left: 25px; }
