--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -178,7 +178,7 @@ b { font-weight: 500; }
   #SessionsHolder #searchbar .search #Search { padding-left: 20px; width: 60%; }
   #SessionsHolder #searchbar .search #Search input { width: 60%; }
   #SessionsHolder .filter { width: 100%; }
-  #SessionsHolder .sessions { padding-left: 5px; padding-right: 5px; padding-top: 10px; }
+  #SessionsHolder .sessions { margin-left: 0px; padding-left: 5px; padding-right: 5px; padding-top: 10px; }
   #HomePage h3 { font-size: 20px; }
   #HomePage .content { padding-bottom: 10px; }
   #HomePage .content .span1 { padding-bottom: 10px; }
