--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -201,6 +201,10 @@ b{
 					letter-spacing: 1px;
 					text-shadow: 0px -2px 1px $grayDarkest;
 				}
+				a:hover{
+					text-decoration: none;
+					color: $grayMedium;
+				}
 
 				.social{
 					padding-right: 5px;
@@ -469,7 +473,12 @@ b{
 	}
 
 	.video{
-		height: 300px;	
+		height: 300px;
+		embed{
+			height: 100%;
+			width: 100%;
+		}
+			
 	}
 
 	.session-side{
