--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -159,7 +159,9 @@ b { font-weight: 500; }
 .searchResults .results ul li a { font-size: 16px; }
 
 /*Responsiveness -------------------------------------------------- */
-@media (min-width: 1200px) { #SessionsHolder #searchbar { border: none; }
+@media (min-width: 1200px) { #ses-wrap .session-tile .vidthumb { width: 49%; display: inline-block; vertical-align: top; }
+  #ses-wrap .session-tile .text-wrap { height: 3; width: 40%; display: inline-block; }
+  #SessionsHolder #searchbar { border: none; }
   #SessionsHolder #searchbar .search .mglass { margin-left: -15px; }
   #SessionsHolder #searchbar .search form { margin-left: -20px; }
   #SessionsHolder #searchbar .logo { margin-left: 5px; } }
