--- a/themes/igf/scss/layout.scss
+++ b/themes/igf/scss/layout.scss
@@ -76,7 +76,7 @@ b{
 				letter-spacing: 1px;
 				li {
 					a {
-						padding: 22px 0px 0px 0px;
+						padding: 19px 0px 0px 0px;
 						margin-left: 15px;
 						margin-right: 15px;
 						color: $grayLight;
@@ -319,52 +319,53 @@ b{
 			}
 		}
 	}
+	#filter-wrap{
+		.filter{
 
-	.filter{
+			padding-top: 20px;
+			background: $grayLighter;
+			margin-left: -46%;
+			padding-left: 46%;
+			margin-right: -10%;
 
-		padding-top: 20px;
-		background: $grayLighter;
-		margin-left: -46%;
-		padding-left: 46%;
-		margin-right: -10%;
-
-		h5{
-			color: $blue;
-			font-size:15px;
-			}
-
-		form{
-
-			label{
-				font-weight: bold;
-			}	
-
-			ul{
-				list-style-type: none;
-					margin-left: 0px;
-
-				input{
-					margin-top: 0px;
+			h5{
+				color: $blue;
+				font-size:15px;
 				}
+
+			form{
 
 				label{
-					font-weight: normal;
-					display:inline-block;
+					font-weight: bold;
+				}	
+
+				ul{
+					list-style-type: none;
+						margin-left: 0px;
+
+					input{
+						margin-top: 0px;
+					}
+
+					label{
+						font-weight: normal;
+						display:inline-block;
+					}
 				}
-			}
-			
-			.Actions{
-				input{
-					height:43px;
-					text-transform:uppercase;
-					font-size: 12px;
-					letter-spacing: 1px;	
+				
+				.Actions{
+					input{
+						height:43px;
+						text-transform:uppercase;
+						font-size: 12px;
+						letter-spacing: 1px;	
+					}
 				}
 			}
 		}
-	}
-	.tags{
-		padding-bottom: 30px;
+		.tags{
+			padding-bottom: 30px;
+		}
 	}
 	
   /*Search Bar Styling */
@@ -447,15 +448,6 @@ b{
 				left: 10px;
 			}
 		}
-/*
-		.no-vid{
-			padding: 4px;
-			img{
-				width: 100%;
-				
-			}
-			
-		}*/
 
 		.text-wrap{
 			padding: 4px;
@@ -473,12 +465,16 @@ b{
 			a{
 				color:$blueLight;	
 			}
+			.subtext{
+				padding-bottom: 8px;
+			}
 		}
 
 		.tags{
 			font-size: 13px;
 			background: $grayLighter;
 			padding:7px;
+
 		}
 	}
 }
@@ -556,6 +552,13 @@ b{
 			background-color: $grayMedium;
 		}
 	}
+
+	.thumbnail {
+		@include border-radius(0);
+		text-decoration: none;
+		min-height: 140px;
+	}
+
 
 	
 
@@ -658,7 +661,7 @@ b{
 .thumbnail {
 	@include border-radius(0);
 	text-decoration: none;
-	min-height: 120px;
+	min-height: 90px;
 }
 
 /* Search Results */
