Updated to new layout designs

--- a/themes/igf/scss/_variables.scss
+++ b/themes/igf/scss/_variables.scss
@@ -10,7 +10,7 @@
 // Grays
 // -------------------------919294
 $black:                 #000 !default;
-$grayDarkest:            #303030; 
+$grayDarkest:            #414141; 
 $grayDarker:             #5E5E5E;
 $grayDark:				 #535353;
 $gray:                  #696B6F;
@@ -24,9 +24,9 @@ $white:                 #fff !default;
 // Accent colors
 // -------------------------
 $blueLight:				#42A1FC;
-$blue:                  #359BFC;
-$blueDark:				#2188EA;
-$blueDarker:            #0878E3;
+$blue:                  #00A9D8;
+$blueDark:				#008AB2;
+$blueDarker:            #0077A8;
 $green:                 #46a546 !default;
 $red:                   #9d261d !default;
 $yellow:                #ffc40d !default;
