--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -2,7 +2,7 @@
 -------------------------------------------------- */
 html { height: 100%; }
 
-body { background-color: white; min-height: 100%; position: relative; }
+body { -webkit-font-smoothing: antialiased; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); font-weight: 500; background-color: white; min-height: 100%; position: relative; }
 body #wrap { min-height: 810px; }
 
 /* Generic Classes -------------------------------------------------- */
@@ -10,11 +10,11 @@ a { cursor: pointer; transition: all 0.2s linear; }
 
 .heading { padding-bottom: 10px; }
 
-h3 { font-weight: normal; font-size: 30px; color: #303030; margin: 0px; }
+h3 { font-weight: normal; font-size: 30px; color: #414141; margin: 0px; }
 
 h4 { font-weight: 500; }
 
-.btn { padding: 10px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
+.btn { padding: 10px 10px; text-transform: uppercase; font-size: 13px; }
 
 .subtext { color: #919294; }
 
@@ -23,78 +23,83 @@ h4 { font-weight: 500; }
 b { font-weight: 500; }
 
 /* Navigation -------------------------------------------------- */
-#navigation .navbar-inner { background: #303030; }
+#navigation { font-family: Georgia, serif; }
+#navigation .navbar-inner { background: #414141; }
 #navigation .navbar-inner .container .brand { padding-top: 12px; padding-right: 15px; padding-bottom: 16px; }
-#navigation .navbar-inner .container .social-icons { padding-top: 15px; margin-right: -1px; }
-#navigation .navbar-inner .container .social-icons .social { padding: 0 3px; }
-#navigation .navbar-inner .container ul { text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
-#navigation .navbar-inner .container ul li a { padding: 19px 0px 0px 0px; margin-left: 15px; margin-right: 15px; color: #e0e0e0; text-shadow: 0.5px 0px #696b6f; line-height: 12px; border-bottom: 2px #303030 solid; }
-#navigation .navbar-inner .container ul li a:hover { background: none; border-bottom: 2px #359bfc solid; }
-#navigation .navbar-inner .container ul li.active a { color: white; background: #303030; border-bottom: 2px #359bfc solid; }
-#navigation .navbar-inner .container ul .divider-vertical { height: 100%; border-left: 1px black solid; border-right: 1px #535353 solid; }
+#navigation .navbar-inner .container .social-icons { padding-top: 15px; margin-right: 5px; }
+#navigation .navbar-inner .container .social-icons .social { padding: 0 1px; }
+#navigation .navbar-inner .container ul { margin-left: 70px; font-size: 15px; letter-spacing: 1px; font-weight: 500 !important; }
+#navigation .navbar-inner .container ul li a { padding: 19px 2px 2px 3px; margin-left: 20px; margin-right: 20px; color: white; text-shadow: 0.5px 0px #696b6f; line-height: 12px; border-bottom: 2px #414141 solid; }
+#navigation .navbar-inner .container ul li a:hover { background: none; border-bottom: 2px #00a9d8 solid; }
+#navigation .navbar-inner .container ul li.active a { color: white; background: #414141; border-bottom: 2px #00a9d8 solid; }
 
 /* Search -------------------------------------------------- */
-#searchbar { background: #f3f3f3; border-bottom: 1px solid #d8d8d8; }
+#searchbar { margin-top: -1px; background: #00a9d8; }
 #searchbar .search { margin-top: -10px; }
 #searchbar .search label { display: none; }
 #searchbar .search form { margin-bottom: 10px; }
 #searchbar .search .mglass { position: relative; margin-bottom: -62px; margin-left: 5px; margin-top: 0px; }
 #searchbar .search fieldset { width: 85%; display: inline-block; }
 #searchbar .search #Search { display: inline-block; width: 80%; margin-right: 0px; }
-#searchbar .search #Search input { width: 90%; height: 35px; border: none; box-shadow: 0px 2px 2px #e0e0e0 inset; padding-left: 40px; }
-#searchbar .search #Search ::-webkit-input-placeholder { color: #535353; }
-#searchbar .search #Search :-moz-placeholder { color: #535353; }
-#searchbar .search #Search ::-moz-placeholder { color: #535353; }
-#searchbar .search #Search :-ms-input-placeholder { color: #535353; }
-#searchbar .search #CustomSearchForm_CustomSearchForm_action_customResults { display: inline-block; width: 77px; height: 43px; padding: 5px 10px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
+#searchbar .search #Search input { width: 90%; height: 35px; border: none; padding-left: 40px; }
+#searchbar .search #Search ::-webkit-input-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search #Search :-moz-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search #Search ::-moz-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search #Search :-ms-input-placeholder { font-size: 14px; color: #535353; }
+#searchbar .search #CustomSearchForm_CustomSearchForm_action_customResults { -webkit-font-smoothing: antialiased; display: inline-block; width: 90px; height: 43px; padding: 5px 10px; font-size: 13px; text-transform: uppercase; border: 1px solid #0077a8; }
 #searchbar .logo { text-align: right; padding-top: 15px; }
 
 /*Footer -------------------------------------------------- */
-#footer { width: 100%; background: #696b6f; position: relative; }
-#footer .container { padding: 30px 20px 70px 20px; padding-top: 30px; padding-bottom: 70px; }
+#footer { width: 100%; background: #414141; position: relative; }
+#footer span { color: white; font-weight: bold; }
+#footer .container .row { padding: 0px 20px 0px 20px; }
+#footer .container .element-outer { height: 224px; padding-right: 0px; border-right: 1px solid #696b6f; }
+#footer .container .element-inner { height: 100%; padding-top: 0px; border-right: 1px solid black; }
+#footer .container .element { padding-top: 30px; }
+#footer .container #meeting-list { display: inline-block; }
 #footer .container ul { list-style-type: none; margin: 0px; }
-#footer .container ul li { padding: 3px; }
-#footer .container ul li a { color: white; font-weight: 100; font-size: 13px; letter-spacing: 1px; text-shadow: 0px -2px 1px #303030; }
+#footer .container ul li { padding: 0px; }
+#footer .container ul li a { color: white; font-size: 14px; text-shadow: 0px -2px 1px #414141; }
 #footer .container ul li a:hover { text-decoration: none; color: #d8d8d8; }
 #footer .container ul li .social { padding-right: 5px; }
-#footer .container .logo { text-align: right; }
-#footer .container .website span { margin-top: 0px; color: white; font-weight: 400; }
-#footer .container .website a { color: white; font-weight: 100; letter-spacing: 1px; text-decoration: underline; }
+#footer .container ul li.buff { padding-bottom: 10px; }
+#footer .container .meetings span a { color: white; text-decoration: none; }
+#footer .container .meetings ul { padding-top: 10px; }
+#footer .container .meetings ul li { padding: 0px; width: 45%; display: inline-block; float: left; }
+#footer .container .logo { padding-top: 30px; float: right; }
+#footer .container .website a { color: white; letter-spacing: 1px; text-decoration: underline; }
 
 /*HomePage -------------------------------------------------- */
 #HomePage .content { padding-top: 50px; padding-bottom: 50px; }
-#HomePage .content .text { color: #303030; font-size: 35px; line-height: 35px; }
+#HomePage .content .text { font-family: Georgia, serif; color: #414141; font-size: 35px; line-height: 35px; }
 #HomePage .twitter { margin-bottom: 50px; border: 1px solid #d8d8d8; }
 #HomePage .speakers { padding-bottom: 50px; }
 #HomePage .speakers .link { text-align: right; padding-top: 20px; text-decoration: underline; }
+#HomePage .sessions .heading h3 { font-family: Georgia, serif; }
 #HomePage .tags-wrap { margin-bottom: 40px; border: 1px #d8d8d8 solid; background: #f3f3f3; min-height: 100px; }
 #HomePage .tags-wrap .tags { padding: 10px; }
-#HomePage .tags-wrap .tags h5 { font-size: 16px; color: #303030; }
+#HomePage .tags-wrap .tags h5 { font-family: Georgia, serif; font-weight: normal; font-size: 22px; color: #414141; }
 #HomePage .tags-wrap a { text-decoration: none; }
 
 /*SessionsHolder -------------------------------------------------- */
-#SessionsHolder { /*Search Bar Styling */ }
 #SessionsHolder #filter-form { cursor: pointer; }
 #SessionsHolder #tag-head { cursor: pointer; }
-#SessionsHolder #wrap { background: #f3f3f3; }
-#SessionsHolder .sessions { background: white; border: 1px #d8d8d8 solid; margin-left: 9px; padding-left: 20px; padding-right: 20px; background: white; border-top: 1px #d8d8d8 solid; padding-top: 30px; height: 100%; }
+#SessionsHolder #wrap { background: white; }
+#SessionsHolder .sessions { background: none; margin-left: 9px; padding-left: 20px; padding-right: 20px; padding-top: 30px; height: 100%; }
 #SessionsHolder .sessions .heading { padding-left: 10px; }
 #SessionsHolder .sessions .more { display: none; }
 #SessionsHolder .sessions .more .button { text-align: center; }
 #SessionsHolder .sessions .more .button a { width: 90px; }
-#SessionsHolder #filter-wrap .filter { padding-top: 20px; background: #f3f3f3; margin-left: -46%; padding-left: 46%; margin-right: -10%; }
-#SessionsHolder #filter-wrap .filter h5 { color: #359bfc; font-size: 15px; }
-#SessionsHolder #filter-wrap .filter form label { font-weight: bold; }
+#SessionsHolder #filter-wrap .filter { margin-top: 20px; background: #f3f3f3; border: 1px #d8d8d8 solid; padding-left: 10%; padding-right: 10%; margin-bottom: 20px; color: black; }
+#SessionsHolder #filter-wrap .filter h5 { color: #00a9d8; font-size: 15px; }
+#SessionsHolder #filter-wrap .filter form { margin-right: label; margin-right-font-weight: bold; }
 #SessionsHolder #filter-wrap .filter form ul { list-style-type: none; margin-left: 0px; }
 #SessionsHolder #filter-wrap .filter form ul input { margin-top: 0px; }
-#SessionsHolder #filter-wrap .filter form ul label { font-weight: normal; display: inline-block; }
+#SessionsHolder #filter-wrap .filter form ul label { font-size: 12px !important; font-weight: normal; display: inline-block; }
 #SessionsHolder #filter-wrap .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
-#SessionsHolder #filter-wrap .tags { padding-bottom: 30px; }
-#SessionsHolder #searchbar { border: none; }
-#SessionsHolder #searchbar #Search input { width: 89%; }
-#SessionsHolder #searchbar .mglass { margin-left: -5px; }
-#SessionsHolder #searchbar form { margin-left: -10px; }
-#SessionsHolder #searchbar .logo { margin-left: 5px; }
+#SessionsHolder #filter-wrap .tags { padding-right: 20px; padding-bottom: 30px; }
+#SessionsHolder #filter-wrap .tags h5 { color: #414141; }
+#SessionsHolder #filter-wrap .tags a { color: #0077a8; }
 #SessionsHolder .pagination { display: none; text-align: center; }
 #SessionsHolder .pagination .pages { border-radius: 0px; text-align: center; }
 #SessionsHolder .pagination .pages a { border-radius: 0px; width: 20px; border-left-width: 1px; border-right-width: 0px; }
@@ -110,7 +115,7 @@ b { font-weight: 500; }
 .sessions .session-tile .vidthumb .thumb { position: relative; margin-top: -40px; top: 0px; }
 .sessions .session-tile .vidthumb .icon { position: relative; z-index: 1; top: 0px; left: 10px; }
 .sessions .session-tile .text-wrap { padding: 4px; margin: 5px; }
-.sessions .session-tile .text-wrap .title { color: #303030; font-size: 14px; }
+.sessions .session-tile .text-wrap .title { font-family: Georgia, serif; color: #414141; font-size: 14px; }
 .sessions .session-tile .text-wrap p { padding: 0; margin: 0; }
 .sessions .session-tile .text-wrap a { color: #42a1fc; }
 .sessions .session-tile .text-wrap .subtext { padding-bottom: 8px; }
@@ -120,7 +125,7 @@ b { font-weight: 500; }
 #ses-wrap { padding-top: 30px; }
 #ses-wrap .main div { padding-bottom: 20px; }
 #ses-wrap .main h5 { font-size: 16px; }
-#ses-wrap .main .content h5 { color: #359bfc; }
+#ses-wrap .main .content h5 { color: #00a9d8; }
 #ses-wrap .main p { padding-bottom: 10px; }
 #ses-wrap .video { height: 300px; }
 #ses-wrap .video embed { height: 100%; width: 100%; }
@@ -142,7 +147,7 @@ b { font-weight: 500; }
 #MeetingsHolder #meetings-wrap a:hover { text-decoration: none; }
 
 /* meeting -------------------------------------------------- */
-#MeetingController h5 { font-size: 16px; color: #303030; }
+#MeetingController h5 { font-size: 16px; color: #414141; }
 #MeetingController .header { padding-top: 30px; padding-bottom: 10px; margin-bottom: 10px; }
 #MeetingController .tags-wrap { margin-bottom: 0px; border: 1px #d8d8d8 solid; border-bottom: none; background: #f3f3f3; min-height: 100px; }
 #MeetingController .tags-wrap .tags { padding: 10px; }
@@ -173,9 +178,10 @@ b { font-weight: 500; }
   #SessionsHolder #searchbar .search .mglass { margin-left: -15px; }
   #SessionsHolder #searchbar .search form { margin-left: -20px; }
   #SessionsHolder #searchbar .logo { margin-left: 5px; } }
+@media (max-width: 1200px) { #filter-wrap form fieldset select { width: 90%; }
+  #filter-wrap form fieldset #Speaker input { width: 90%; } }
 @media (max-width: 767px) { body { padding: 0px; }
   body #wrap { padding-left: 20px; padding-right: 20px; }
-  #footer .container { padding-left: 20px; padding-right: 20px; }
   #navigation .navbar-inner .container .btn-navbar { margin-top: 10px; }
   #navigation .navbar-inner .container .social-icons { display: none !important; }
   #SessionsHolder #filter-form { cursor: pointer; }
@@ -184,12 +190,9 @@ b { font-weight: 500; }
   #SessionsHolder #tag-head:hover { text-decoration: underline; }
   #SessionsHolder #Form_FilterForm { display: none; }
   #SessionsHolder #tag-list { display: none; }
-  #SessionsHolder #searchbar { padding-left: 10px; }
-  #SessionsHolder #searchbar .search .mglass { margin-left: 15px; }
-  #SessionsHolder #searchbar .search fieldset { width: 100%; }
-  #SessionsHolder #searchbar .search #Search { padding-left: 20px; width: 60%; }
-  #SessionsHolder #searchbar .search #Search input { width: 60%; }
-  #SessionsHolder .filter { width: 100%; }
+  #SessionsHolder #filter-wrap { margin-top: 20px; padding: 0px; padding-left: 20px; width: 100%; margin-left: 0px; background: #f3f3f3; border: 1px #d8d8d8 solid; }
+  #SessionsHolder #filter-wrap .filter { padding: 0px; background: none; border: none; margin-left: 0px; width: 100%; }
+  #SessionsHolder #filter-wrap .filter .tags { padding-bottom: 0px; }
   #SessionsHolder .sessions { margin-left: 0px; padding-left: 5px; padding-right: 5px; padding-top: 10px; }
   #HomePage h3 { font-size: 20px; }
   #HomePage .content { padding-bottom: 10px; }
@@ -219,11 +222,20 @@ b { font-weight: 500; }
   .sessions .heading div { width: 100%; display: inline-block; }
   .sessions .heading div.link { text-align: left; }
   .sessions .session-tile .vidthumb { width: 49%; display: inline-block; vertical-align: top; }
-  .sessions .session-tile .text-wrap { height: 3; width: 40%; display: inline-block; } }
+  .sessions .session-tile .text-wrap { height: 3; width: 40%; display: inline-block; }
+  #footer { width: 100%; background: #414141; position: relative; }
+  #footer span { color: white; font-weight: bold; }
+  #footer .container { height: 100%; padding-left: 20px; padding-right: 20px; padding-bottom: 30px; padding-top: 30px; }
+  #footer .container .section { display: inline-block; width: 49%; }
+  #footer .container #meeting-list { display: none; }
+  #footer .container .element-outer { height: 100%; padding-right: 0px; border: none; }
+  #footer .container .element-inner { border: none; padding-top: 0px; }
+  #footer .container .element { padding-top: 0px; float: left; }
+  #footer .container .meetings { display: none; }
+  #footer .container .logo { width: 160px; padding-top: 0px; float: right; } }
 @media (min-width: 768px) and (max-width: 979px) { #HomePage .content .span1 { padding-top: 30px; }
   #HomePage .content .text { padding: 10px; }
-  #SessionsHolder #Form_FilterForm select { width: 75%; }
-  #SessionsHolder #Form_FilterForm #Form_FilterForm_Speaker { width: 75%; }
+  #SessionsHolder #filter-wrap #Topic ul li input { display: block; }
   #navigation .navbar-inner .container .btn-navbar { margin-top: 10px; }
   #navigation .navbar-inner .container .social-icons { display: none !important; }
   #searchbar .search fieldset { width: 100%; }
