--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -2,7 +2,7 @@
 -------------------------------------------------- */
 html { height: 100%; }
 
-body { -webkit-font-smoothing: antialiased; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); font-weight: 500; background-color: white; min-height: 100%; position: relative; }
+body { -webkit-font-smoothing: antialiased; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); background-color: white; min-height: 100%; position: relative; }
 body #wrap { min-height: 810px; }
 
 /* Generic Classes -------------------------------------------------- */
@@ -29,7 +29,7 @@ b { font-weight: 500; }
 #navigation .navbar-inner .container .social-icons { padding-top: 15px; margin-right: 5px; }
 #navigation .navbar-inner .container .social-icons .social { padding: 0 1px; }
 #navigation .navbar-inner .container ul { margin-left: 70px; font-size: 15px; letter-spacing: 1px; font-weight: 500 !important; }
-#navigation .navbar-inner .container ul li a { padding: 19px 2px 2px 3px; margin-left: 20px; margin-right: 20px; color: white; text-shadow: 0.5px 0px #696b6f; line-height: 12px; border-bottom: 2px #414141 solid; }
+#navigation .navbar-inner .container ul li a { padding: 19px 2px 2px 3px; margin-left: 20px; margin-right: 20px; color: white; text-shadow: 0.5px 0px #696b6f; line-height: 12px; border-bottom: 2px #414141 solid; box-shadow: none; }
 #navigation .navbar-inner .container ul li a:hover { background: none; border-bottom: 2px #00a9d8 solid; }
 #navigation .navbar-inner .container ul li.active a { color: white; background: #414141; border-bottom: 2px #00a9d8 solid; }
 
@@ -120,6 +120,7 @@ b { font-weight: 500; }
 .sessions .session-tile .text-wrap p { padding: 0; margin: 0; }
 .sessions .session-tile .text-wrap a { color: #42a1fc; }
 .sessions .session-tile .text-wrap .subtext { padding-bottom: 8px; }
+.sessions .session-tile .nov { width: 90% !important; }
 .sessions .session-tile .tags { font-size: 13px; background: #f3f3f3; padding: 7px; }
 
 /* session controller --------------------------------------------------*/
@@ -174,7 +175,8 @@ b { font-weight: 500; }
 
 /*Responsiveness -------------------------------------------------- */
 @media (min-width: 1200px) { #ses-wrap .session-tile .vidthumb { width: 49%; display: inline-block; vertical-align: top; }
-  #ses-wrap .session-tile .text-wrap { height: 3; width: 40%; display: inline-block; } }
+  #ses-wrap .session-tile .text-wrap { height: 3; width: 40%; display: inline-block; }
+  #ses-wrap .session-tile .nov { width: 90%; } }
 @media (max-width: 1200px) { #filter-wrap form fieldset select { width: 100%; }
   #filter-wrap form fieldset #Speaker input { width: 90%; } }
 @media (max-width: 767px) { body { padding: 0px; }
@@ -206,7 +208,12 @@ b { font-weight: 500; }
   #searchbar .search .mglass { margin-left: 25px; }
   #searchbar .search #Search { padding-left: 20px; width: 60%; }
   #searchbar .search #Search input { width: 60%; }
+  #searchbar .search #Search ::-webkit-input-placeholder { font-size: 14px; color: white; }
+  #searchbar .search #Search :-moz-placeholder { font-size: 14px; color: white; }
+  #searchbar .search #Search ::-moz-placeholder { font-size: 14px; color: white; }
+  #searchbar .search #Search :-ms-input-placeholder { font-size: 14px; color: white; }
   #SessionController .btn { margin-bottom: 10px; }
+  #SessionController #searchbar .search .mglass { margin-top: 10px; }
   #SessionController .social-icons { text-align: center; }
   #SessionController .social-icons .span3 { display: inline-block; width: 20%; margin-left: 2%; margin-right: 2%; }
   #SessionController .social-icons .view { margin-top: 3px; vertical-align: top; }
@@ -240,7 +247,7 @@ b { font-weight: 500; }
   #searchbar .search fieldset #Search input { width: 85%; }
   #SessionController .social-icons .span3 { width: 45%; margin-left: 2.5%; margin-right: 2.5%; padding-bottom: 10px; }
   #SessionController .social-icons .span3 .view-count { width: 65px; }
-  #meetings-wrap .span3 { height: 275px; }
+  #meetings-wrap .span3 { height: 150px; }
   #MeetingController .section { padding: 0px !important; height: 95px; margin-left: 0px !important; }
   #MeetingController .section .social { width: 200px; text-align: center; padding-top: 8px; padding-left: 6px; }
   #MeetingController .section .social .span4 { margin-right: 18px; display: inline-block; width: 20%; }
