--- a/themes/igf/css/layout.css
+++ b/themes/igf/css/layout.css
@@ -83,7 +83,7 @@ b { font-weight: 500; }
 
 /*SessionsHolder -------------------------------------------------- */
 #SessionsHolder #filter-form { cursor: pointer; }
-#SessionsHolder #tag-head { cursor: pointer; }
+#SessionsHolder #tag-head { cursor: pointer; color: #00a9d8; }
 #SessionsHolder #wrap { background: white; }
 #SessionsHolder .sessions { background: none; margin-left: 0px; padding-left: 20px; padding-right: 20px; padding-top: 30px; height: 100%; }
 #SessionsHolder .sessions .heading { padding-left: 10px; }
@@ -99,8 +99,8 @@ b { font-weight: 500; }
 #SessionsHolder #filter-wrap .filter form ul label { font-size: 12px !important; font-weight: normal; display: inline-block; }
 #SessionsHolder #filter-wrap .filter form .Actions input { height: 43px; text-transform: uppercase; font-size: 12px; letter-spacing: 1px; }
 #SessionsHolder #filter-wrap .tags { padding-right: 20px; padding-bottom: 30px; }
-#SessionsHolder #filter-wrap .tags h5 { color: #414141; }
 #SessionsHolder #filter-wrap .tags a { color: #0077a8; }
+#SessionsHolder #filter-wrap #tag-list { display: none; }
 #SessionsHolder .pagination { display: none; text-align: center; }
 #SessionsHolder .pagination .pages { border-radius: 0px; text-align: center; }
 #SessionsHolder .pagination .pages a { border-radius: 0px; width: 20px; border-left-width: 1px; border-right-width: 0px; }
